fix: scrollbar corner

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -8,6 +8,7 @@ html{
 ::-webkit-scrollbar-thumb {background: var(--color-text-acc); border: 5px solid var(--color-background); border-radius: 10px;}
 ::-webkit-scrollbar-track {background: var(--color-text-acc); border: 7px solid var(--color-background);}
 ::-webkit-scrollbar {width: 15px;}
+::-webkit-scrollbar-corner { background: var(--color-background); }
 
 html,
 body{
